# agent-cli

./: .gitignore  Cargo.toml  run.sh  settings.json  skills-lock.json
.team/: config.json
claude-code-rust/: Cargo.toml
claude-code-rust/src/: lib.rs
claude-code-rust/src/gui/: mod.rs  settings.rs  sidebar.rs
claude-code-rust/src/tools/: mod.rs
claude-code-source-code/: README.md
crates/hank-core/: Cargo.toml
crates/hank-core/src/: lib.rs  message.rs  permission.rs  prompt.rs  query.rs  settings.rs  streaming.rs  tool.rs
crates/hank-mcp/: Cargo.toml
crates/hank-mcp/src/: client.rs
crates/hank-tools/: Cargo.toml
crates/hank-tools/src/: tools.rs
crates/hank-tui/: Cargo.toml
crates/hank-tui/src/: app.rs
docs/: prompt-harness.md  todo.md
docs/learn/: 01-runtime-flow.md  02-prompt-harness.md  03-tools-permissions-mcp.md  04-context-compaction-and-attachments.md  README.md
openspec/changes/archive/2026-03-29-add-file-tools-to-rust/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-30-add-context-compact/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-30-add-skill-loading/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-30-add-subagent/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-30-align-rust-to-s-full/: design.md  proposal.md  tasks.md
openspec/changes/rust-core-plugin-architecture/: design.md  proposal.md  tasks.md
openspec/changes/rust-core-plugin-architecture/specs/builtin-tools/: spec.md
openspec/changes/rust-core-plugin-architecture/specs/mcp-client/: spec.md
openspec/changes/rust-core-plugin-architecture/specs/message-harness/: spec.md
openspec/changes/rust-core-plugin-architecture/specs/permission-system/: spec.md
openspec/changes/rust-core-plugin-architecture/specs/prompt-harness/: spec.md
openspec/specs/background/: spec.md
openspec/specs/context-compact/: spec.md
openspec/specs/file-tasks/: spec.md
openspec/specs/file-tools/: spec.md
openspec/specs/messaging/: spec.md
openspec/specs/skill-loading/: spec.md
openspec/specs/subagent/: spec.md
openspec/specs/teammates/: spec.md
src/: main.rs
(+11 files in other folders)
