[package]
name = "hank-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["stream", "json"] }
eventsource-stream = "0.2"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
fastrand = "2"
