[package]
name = "hank-tui"
version.workspace = true
edition.workspace = true

[dependencies]
hank-core = { path = "../hank-core" }
tokio = { workspace = true }
serde_json = { workspace = true }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = { version = "0.7", features = ["crossterm"] }
throbber-widgets-tui = "0.7"
futures = "0.3"
